--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>UCS</title>
   </head>
   <body>
     <div id="root"></div>
